--- a/test/index.html
+++ b/test/index.html
@@ -5,15 +5,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>CREON Test</title>
+    <title>Creon Test</title>
+
+    <!-- TESTING API -->
+    <!-- добавим стили mocha для отображения результатов -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mocha/3.2.0/mocha.css">
+    <!-- добавляем сам фреймворк mocha -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mocha/3.2.0/mocha.js"></script>
+    <script>
+        // включаем режим тестирования в стиле BDD
+        mocha.setup('bdd');
+    </script>
+    <!-- добавим chai -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chai/3.5.0/chai.js"></script>
+    <script>
+        // chai предоставляет большое количество функций. Объявим assert глобально
+        let assert = chai.assert;
+    </script>
 </head>
 
 <body>
-    <div></div>
+
+    <div id="block"></div>
+    <div id="blockParent"></div>
 
     <script src="../src/creon.js"></script>
     <script src="./test.js"></script>
-    <script src="../src/elemframe.js"></script>
+
+    <div id="mocha"></div>
+
+    <!-- Запускаем тесты -->
+    <script>
+        mocha.run();
+    </script>
 </body>
 
 </html>
