no unneeded frame(); copy events object from creon.frame; fixed elem.on.hver by creon.onspecial; elem.events .remove() added; onspecial cover usual events; fixes this <-> elem; elem.event.name.remove() fix to delete property; event self delete fix; elem.config() method working with styles, attributes, arrays, js props; elem.backup() method with modes by creon.backup[mode]; creon.backup for backup modes; a lot of tests; RESULT: stability 80%, can be errrors 20%

--- a/test/index.html
+++ b/test/index.html
@@ -26,8 +26,9 @@
 
 <body>
 
-    <div id="block"></div>
-    <div id="blockParent"></div>
+    <div id="blockId"></div>
+    <div id="blockParentId"></div>
+    <div id="blockTwoId"></div>
 
     <script src="../src/creon.js"></script>
     <script src="./test.js"></script>
@@ -37,6 +38,7 @@
     <!-- Запускаем тесты -->
     <script>
         mocha.run();
+        setTimeout(() => console.log(window.backup), 1000);
     </script>
 </body>
 
